# i2c_py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
i2c_lib/: __init__.py  bus.py  cli.py  exceptions.py
i2c_lib/drivers/: __init__.py  base.py  devices.py
i2c_lib/hal/: __init__.py  backends.py
tests/: test_all.py
